<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:paddingStart="@dimen/space_xl"
    android:paddingTop="@dimen/space_xl"
    android:paddingEnd="@dimen/space_xl"
    android:paddingBottom="@dimen/space_l">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/dialog_settings"
        android:textAppearance="@style/TextAppearance.App.Title" />

    <View
        android:id="@+id/settingsRule"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hairline"
        android:layout_below="@id/settingsTitle"
        android:layout_marginTop="@dimen/space_m"
        android:background="@drawable/divider_rule" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settingsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsRule"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginBottom="@dimen/space_m"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_sort"
                android:textAppearance="@style/TextAppearance.App.Overline" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipsSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                app:chipSpacingHorizontal="@dimen/space_s"
                app:selectionRequired="true"
                app:singleLine="false"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSortNewest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/sort_newest"
                    style="@style/Widget.App.Chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSortTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/sort_title"
                    style="@style/Widget.App.Chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSortCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/sort_category"
                    style="@style/Widget.App.Chip" />

            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/hairline"
                android:layout_marginTop="@dimen/space_l"
                android:background="@drawable/divider_rule" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchNotePreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_m"
                android:minHeight="@dimen/touch_min"
                android:text="@string/settings_note_preview"
                android:textAppearance="@style/TextAppearance.App.Body" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchCompactRows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:minHeight="@dimen/touch_min"
                android:text="@string/settings_compact"
                android:textAppearance="@style/TextAppearance.App.Body" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/hairline"
                android:layout_marginTop="@dimen/space_l"
                android:background="@drawable/divider_rule" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSettingsReset"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/touch_min"
                android:layout_marginTop="@dimen/space_s"
                android:text="@string/settings_reset"
                app:icon="@drawable/ic_trash"
                app:iconTint="@color/clay_danger"
                style="@style/Widget.App.Button.Danger" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/settingsActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsScroll"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSettingsCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_min"
            android:text="@string/action_cancel"
            style="@style/Widget.App.Button.Quiet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSettingsDone"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_min"
            android:layout_marginStart="@dimen/space_s"
            android:minWidth="96dp"
            android:text="@string/action_done"
            style="@style/Widget.App.Button.Primary" />

    </LinearLayout>

</RelativeLayout>
