<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:paddingStart="@dimen/space_xl"
    android:paddingTop="@dimen/space_xl"
    android:paddingEnd="@dimen/space_xl"
    android:paddingBottom="@dimen/space_l">

    <com.tinyarchive.app.core.ui.SectionHeaderView
        android:id="@+id/categoriesHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:sectionOverline="@string/dialog_categories"
        app:sectionTitle="@string/dialog_categories_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoriesHeader"
        android:layout_marginTop="@dimen/space_s"
        android:layout_marginBottom="@dimen/space_m"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/categoriesFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listCategories"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategoryName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/category_add_hint"
                style="@style/Widget.App.TextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCategoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.App.Body" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCategoryAdd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cta_height_secondary"
                android:layout_marginStart="@dimen/space_s"
                android:text="@string/action_add"
                app:icon="@drawable/ic_plus"
                style="@style/Widget.App.Button.Secondary" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCategoriesDone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cta_height_compact"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/action_done"
            app:icon="@drawable/ic_check"
            style="@style/Widget.App.Button.Primary" />

    </LinearLayout>

</RelativeLayout>
